syntax = "proto3";

package comment;

import "google/protobuf/timestamp.proto";

option go_package = "your_project/proto";

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (Comment);
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);
  rpc CreateReply(CreateReplyRequest) returns (Comment);
  rpc UpdateComment(UpdateCommentRequest) returns (Comment);
  rpc GetCommentByID(GetCommentByIDRequest) returns (Comment);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
}

message Comment {
  int64 id = 1;
  string content = 2;
  int64 author_id = 3;
  int64 parent_id = 4;
  repeated Comment replies = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateCommentRequest {
  string content = 1;
  int64 author_id = 2;
  int64 parent_id = 3;
}

message GetCommentsRequest {
  int64 parent_id = 1;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}

message CreateReplyRequest {
  string content = 1;
  int64 author_id = 2;
  int64 parent_id = 3;
}

message UpdateCommentRequest {
  int64 id = 1;
  string content = 2;
}

message GetCommentByIDRequest {
  int64 id = 1;
}

message DeleteCommentRequest {
  int64 id = 1;
}

message DeleteCommentResponse {
  bool success = 1;
}
